RESOLVED FIXED76577
Crash declaring different line-grids on nested elements
https://bugs.webkit.org/show_bug.cgi?id=76577
Summary Crash declaring different line-grids on nested elements
Alan Stearns
Reported 2012-01-18 14:58:26 PST
Loading this causes a crash. If grid1 and grid2 are not nested, there is no crash. <style> .grid1 { -webkit-line-grid: grid1; } .grid2 { -webkit-line-grid: grid2; } </style> <body> <div class=grid1> <div class=grid2> </div> </div> </body>
Attachments
Patch (3.15 KB, patch)
2012-01-19 09:43 PST, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2012-01-19 09:43:29 PST
Dave Hyatt
Comment 2 2012-01-19 09:45:32 PST
Fixed in r105420.
Note You need to log in before you can comment on or make changes to this bug.