https://bugs.webkit.org/show_bug.cgi?id=76577

Fix crash when nested line grids are used. Make sure to bail out if no line grid
is found rather than crashing.

Reviewed by Dan Bernstein.

Source/WebCore:

Added fast/line-grid/line-grid-nested.html.

* rendering/LayoutState.cpp:
(WebCore::LayoutState::establishLineGrid):

LayoutTests:

* fast/line-grid/line-grid-nested-expected.txt: Added.
* fast/line-grid/line-grid-nested.html: Added.



Canonical link: https://commits.webkit.org/93465@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105420 268f45cc-cd09-0410-ab3c-d52691b4dbfc